--- a/rx_digiprint_gui/Views/PrintQueueView/FileOpen.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/FileOpen.xaml
@@ -45,7 +45,7 @@
         
         <ig:XamGrid x:Name="DirGrid"
                 Grid.Row="2" Grid.Column="1" Grid.RowSpan="2"
-                CellStyle="{DynamicResource XamGridCellControlStyle-PrintQueue}"
+                CellStyle="{DynamicResource XamGridCellControlStyle}"
                 HeaderStyle="{DynamicResource XamGridHeaderStyleSortable}"
                 AutoGenerateColumns="False"
                 RowHeight="Dynamic"
