mag_7088 - improve ThreadHandling (list/info/names ...) - improve PrintQueueView - new EFluidCtrlModes (flush_0..2) - make work Purge again in TX machines

--- a/rx_digiprint_gui/Views/PrintQueueView/FileOpen_LB702.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/FileOpen_LB702.xaml
@@ -107,7 +107,9 @@
             <common:RxRadioButton x:Name="MidSize"   Content="Mid"   HorizontalAlignment="Center" MinWidth="50" Checked="Mid_Checked"   />
             <common:RxRadioButton x:Name="LargeSize" Content="Large" HorizontalAlignment="Center" MinWidth="50" Checked="Large_Checked" Last="True"/>
         </StackPanel>
-        <Button Grid.Row="0" Content="áâ" VerticalAlignment="Top" HorizontalAlignment="Right" Click="View_Clicked" FontFamily="Wingdings 3" Margin="-20,0" Height="40"/>
+        <Button Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Right" Click="View_Clicked" FontFamily="Wingdings 3" Margin="-20,0" Height="40">
+            <Image Source="../../Resources/Bitmaps/WebIn.ico"/>
+        </Button>
         <TextBlock Text="Refreshing" Grid.RowSpan="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="100" x:Name="MsgRefresh" Foreground="#FFFF0909" RenderTransformOrigin="0.5,0.5">
             <TextBlock.RenderTransform> 
                 <RotateTransform Angle="-20"/>
