--- a/rx_digiprint_gui/Views/PrintSystemView/EncoderView.xaml
+++ b/rx_digiprint_gui/Views/PrintSystemView/EncoderView.xaml
@@ -26,25 +26,26 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Ampl Run"/>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Ampl Act[µm]" />
             <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding AmplOld, Converter={StaticResource HeadVal_Converter10}}" HorizontalAlignment="Right"/>
             <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding AmplOld, Converter={StaticResource HeadVal_Converter10}}" HorizontalAlignment="Right" x:Name="TX_AmplOld_1"/>
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Ampl New"/>
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="Ampl New[µm]" />
             <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AmplNew, Converter={StaticResource HeadVal_Converter10}}" HorizontalAlignment="Right"/>
             <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding AmplNew, Converter={StaticResource HeadVal_Converter10}}" HorizontalAlignment="Right" x:Name="TX_AmplNew_1"/>
 
+            <!--
             <TextBlock Grid.Row="2" Grid.Column="0" Text="Change [%]"/>
             <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Percentage, Converter={StaticResource HeadVal_Converter10}}" HorizontalAlignment="Right"/>
             <TextBlock Grid.Row="2" Grid.Column="2" Text="{Binding Percentage, Converter={StaticResource HeadVal_Converter10}}" HorizontalAlignment="Right" x:Name="TX_Percent_1"/>
-
+            -->
             <TextBlock Grid.Row="3" Grid.Column="0" Text="Distance [m]"/>
             <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Meters}"/>
 
-            <common:RxButton Grid.Row="4" Grid.Column="1" Click="Save_Clicked" Height="30" HorizontalAlignment="Center">
+            <common:RxButton Grid.Row="4" Grid.Column="1" Click="Save_Clicked" Height="30" HorizontalAlignment="Center" IsEnabled="{Binding IsValid}">
                 <Image Source="{StaticResource Yes_ico}"/>
             </common:RxButton>
-            <common:RxButton Grid.Row="4" Grid.Column="2" Click="Save2_Clicked" Height="30" HorizontalAlignment="Center">
+            <common:RxButton Grid.Row="4" Grid.Column="2" Click="Save2_Clicked" Height="30" HorizontalAlignment="Center" IsEnabled="{Binding IsValid}" x:Name="BN_IsValid_1">
                 <Image Source="{StaticResource Yes_ico}"/>
             </common:RxButton>
 
