mag_7152 code - update FPGA register files to version 1762 - PrintQueue improvements - digiprintgui new config: Debug-Remote|x64 - traces for more info concerning FIFO empty bug (PrintDone Warnings ...) - traces for UDP0/1 dis- and reconnection - improve PURGE (for TX80X machines - doc Roller Correction - doc altera FIFO

--- a/rx_digiprint_gui/Views/PrintQueueView/PrintQueueView.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/PrintQueueView.xaml
@@ -128,6 +128,7 @@
                                         IsChecked="{Binding IsSelected}"
                                         VerticalAlignment="Center"
                                         HorizontalAlignment="Center"
+                                        Visibility="{Binding IsSelected, Converter={StaticResource PrintQueueCheckVisible_Converter}}"
                                         />
 
                                     <Image Grid.Column="0" Source="../../Resources/Bitmaps/Changed.ico"
