--- a/rx_digiprint_gui/Converters/Converters.xaml
+++ b/rx_digiprint_gui/Converters/Converters.xaml
@@ -46,6 +46,7 @@
     <converters:PlcLogState_Converter       x:Key="PlcLogState_Converter"/>
     <converters:PlcLogNo_Converter          x:Key="PlcLogNo_Converter"/>
     <converters:PuttyVisible_Converter      x:Key="PuttyVisible_Converter"/>
+    <converters:PrintQueueCheckVisible_Converter      x:Key="PrintQueueCheckVisible_Converter"/>
     <converters:PuttyDbgVisible_Converter   x:Key="PuttyDbgVisible_Converter"/>
     <converters:RotateRect_Converter        x:Key="RotateRect_Converter"/>
     <converters:ScanLength_Converter        x:Key="ScanLength_Converter"/>
