--- a/rx_digiprint_gui/Views/LB701UVView/LB701UV_Status.xaml
+++ b/rx_digiprint_gui/Views/LB701UVView/LB701UV_Status.xaml
@@ -21,10 +21,9 @@
                     <TextBlock Text="Curing Lamp"/> 
                     <TextBlock HorizontalAlignment="Right" x:Name="CuringLamp"/>
                 </Grid>
-                <!--
-                <rx_uc:PlcParCtrl ID="STA_WINDER_DIAMETER_1"            Label="Unwinder Ø"                   Format="f"/>
-                <rx_uc:PlcParCtrl ID="STA_WINDER_DIAMETER_2"            Label="Rewinder Ø"                   Format="f"/>
-                -->
+                <rx_uc:PlcParCtrl ID="STA_PAPERLENGTH_IN"               Label="Length IN"  Unit="m" Format="n"/>
+                <rx_uc:PlcParCtrl ID="STA_PAPERLENGTH_OUT"              Label="Length OUT" Unit="m" Format="n"/>
+                <rx_uc:PlcParCtrl ID="STA_REMAININGLENGTH_OUT"          Label="Left OUT"   Unit="m" Format="n"/>
                 <rx_uc:PlcParCtrl ID="STA_PREPARE_ACTIVE"               Label="Prepare" Visibility="Collapsed"/>
                 <local:LB701UV_Prepare x:Name="MlPrepare"/>
 
