--- a/rx_digiprint_gui/Views/LB702UVView/LB702UV_Status.xaml
+++ b/rx_digiprint_gui/Views/LB702UVView/LB702UV_Status.xaml
@@ -23,7 +23,7 @@
                 </Grid>
                 <rx_uc:PlcParCtrl ID="STA_PAPERLENGTH_IN"       Label="Length IN"  Unit="m" Format="n"/>
                 <rx_uc:PlcParCtrl ID="STA_PAPERLENGTH_OUT"      Label="Length OUT" Unit="m" Format="n"/>
-                <rx_uc:PlcParCtrl ID="PAR_REMAININGLENGTH_OUT " Label="Left OUT"   Unit="m" Format="n"/>
+                <rx_uc:PlcParCtrl ID="STA_REMAININGLENGTH_OUT " Label="Left OUT"   Unit="m" Format="n"/>
 
                 <rx_uc:PlcParCtrl ID="STA_PREPARE_ACTIVE"               Label="Prepare" Visibility="Collapsed"/>
                 <local:LB702UV_Prepare x:Name="Prepare"/>
