--- a/rx_digiprint_gui/Views/TexView/TexCfg.xaml
+++ b/rx_digiprint_gui/Views/TexView/TexCfg.xaml
@@ -33,6 +33,7 @@
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="250"/>
@@ -66,6 +67,8 @@
                     <rx_uc:PlcParCtrl Grid.Row="10" Grid.Column="0" ID="CFG_SLAVE_OFFSET"                 Label="Slave Offset"    Format="f" UserEnabled="usr_service" x:Name="SlaveOffset"/>
                     <rx_uc:PlcParCtrl Grid.Row="10" Grid.Column="1" ID="STA_SLAVE_OFFSET"                 Label=""      Unit="mm" Format="f" IsEnabled="False"/>
                     <rx_uc:PlcCommand Grid.Row="10" Grid.Column="2" ID="CMD_OFFSET_SLAVE"                 Label="SET"  Padding="5,0"  User="usr_service" PreviewMouseUp="Offset_Clicked"/>
+                    <TextBlock Grid.Row="11" Grid.Column="0" Text="Magnetic Band"/>
+                    <rx_uc:PlcCommand Grid.Row="11" Grid.Column="2" ID="CMD_RESET_MAGNETIC_BAND"          Label="RESET"  Padding="5,0"  User="usr_service" x:Name="MagneticBand"/>
                 </Grid>
             </rx_uc:PlcParPanel>
         </ScrollViewer>
