mag_7175 code - rx_encoder_rbf v459 - encoder set all err register to zero with reset_err - Marcel: TX801: Implemented state machine for robot - add FluidCtrlModes Flush3/4 Purge4 (GUI + FluidBoard + Conditionner) - improve PrintDone handling - introduce _prod_log_thread

--- a/rx_digiprint_gui/Views/UserControls/PlcParCtrl.xaml
+++ b/rx_digiprint_gui/Views/UserControls/PlcParCtrl.xaml
@@ -124,7 +124,7 @@
         <TextBlock Grid.Column="0" Text="{Binding Label}" VerticalAlignment="Center" x:Name="LABEL"/>
 
         <TextBlock x:Name="TextCtrl" Grid.Column="1" 
-			Text="{Binding Value}"
+			Text="{Binding Value, Converter={StaticResource HeadVal_Converter}}"
 			HorizontalAlignment="Right"
 			Background="Transparent"
             Padding="2,0"
@@ -132,7 +132,7 @@
             />
 
         <common:RxNumBox x:Name="TextEditCtrl" Grid.Column="1" 
-			Text="{Binding Value}"
+			Text="{Binding Value, Converter={StaticResource HeadVal_Converter}}"
 			HorizontalContentAlignment="Right"
 			Background="Transparent"
             VerticalAlignment="Center"
