--- a/rx_waveform_tool/Views/InkView.xaml
+++ b/rx_waveform_tool/Views/InkView.xaml
@@ -55,12 +55,17 @@
         <TextBlock   Grid.Row="3" Grid.Column="4" Text="Meniscus" Margin="4,0,6,0"/>
         <rx:RxNumBox Grid.Row="3" Grid.Column="5" Text="{Binding Meniscus}" Width="70"/>
 
-        <TextBlock   Grid.Row="4" Grid.Column="4" Text="Out Pres" Margin="4,0,6,0"/>
-        <rx:RxNumBox Grid.Row="4" Grid.Column="5" Text="{Binding CondPresOut}" Width="70"/>
+        <TextBlock   Grid.Row="3" Grid.Column="6" Text="Viscosity" Margin="4,0,6,0"/>
+        <rx:RxNumBox Grid.Row="3" Grid.Column="7" Text="{Binding Viscosity}" Width="70"/>
 
         <TextBlock   Grid.Row="4" Grid.Column="0" Text="Temperature [°C]" />
         <rx:RxNumBox Grid.Row="4" Grid.Column="1" Text="{Binding Temp}" />
-        <TextBlock   Grid.Row="4" Grid.Column="2" Text="Max" Margin="5,0"/>
+        <TextBlock   Grid.Row="4" Grid.Column="2" Text="Max" Margin="4,0,6,0"/>
         <rx:RxNumBox Grid.Row="4" Grid.Column="3" Text="{Binding TempMax}" Width="70"/>
+        <TextBlock   Grid.Row="4" Grid.Column="4" Text="Chiller" Margin="4,0,6,0"/>
+        <rx:RxNumBox Grid.Row="4" Grid.Column="5" Text="{Binding TempChiller}" Width="70"/>
+
+        <TextBlock   Grid.Row="4" Grid.Column="6" Text="Drop Speed" Margin="4,0,6,0"/>
+        <rx:RxNumBox Grid.Row="4" Grid.Column="7" Text="{Binding DropSpeed}" Width="70"/>
     </Grid>
 </UserControl>
