--- a/rx_common_lib_cs/Source/RxNumPad.xaml
+++ b/rx_common_lib_cs/Source/RxNumPad.xaml
@@ -7,6 +7,7 @@
         AllowsTransparency="True"
         Background="Transparent"
         TouchUp="Window_TouchUp"
+        Topmost="True"
         >
         <!-- 
         Topmost="True"
