--- a/rx_digiprint_gui/Views/PrintQueueView/PrintQueueView.xaml
+++ b/rx_digiprint_gui/Views/PrintQueueView/PrintQueueView.xaml
@@ -32,6 +32,7 @@
 
         <!-- toolbar LEFT _______________________________________________________ -->
         <rx_uc:CommandButtons/>
+        <rx_uc:Splicing/>
 
         <!-- toolbar RIGHT _______________________________________________________ -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
