--- a/rx_digiprint_gui/Views/MainWindow.xaml
+++ b/rx_digiprint_gui/Views/MainWindow.xaml
@@ -170,7 +170,7 @@
                 VerticalAlignment="Center" 
                 Foreground="Red" 
                 FontWeight="Bold"
-                Visibility="{Binding Connected, Converter={StaticResource IntToInVisible_Converter}}"
+                Visibility="{Binding GuiConnected, Converter={StaticResource IntToInVisible_Converter}}"
                 RenderTransformOrigin="0.5,0.5" >
                 <TextBlock.RenderTransform>
                     <TransformGroup>
