--- a/rx_digiprint_gui/Views/PrintSystemView/StepperGridCleaf.xaml
+++ b/rx_digiprint_gui/Views/PrintSystemView/StepperGridCleaf.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="RX_DigiPrint.Views.PrintSystemView.CleafStepperGrid"
+﻿<UserControl x:Class="RX_DigiPrint.Views.PrintSystemView.StepperGridCleaf"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
